--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -1,14 +1,20 @@
 // 計算機區
 .calc_bg-img{
-    background-size: contain;
+    background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    background-image: url("../images/revenue_m.png");
+    background-image: url("../images/revenue_s.png");
 }
 
-//計算機記錄列表
+// 計算機記錄列表
+// 間距
+.py-xl{
+    padding-top: 150px;
+    padding-bottom: 160px;
+}
+
 .showdata{
-    margin-top:-160px;
+    margin-top:-100px;
 }
 
 .showdata .material-icons{
@@ -18,9 +24,17 @@
     font-size: 30px;
 }
 
+.work_hour{
+    color:#070e49;
+    text-shadow:-6px 0 #00b7ff,
+    0 2px black,
+    2px 0 black,
+    0 -1px black;
+}
+
 //有什麼好處區
 .advantage img{
-    height: 180px;
+    height: 160px;
     margin-bottom: 20px;
 }
 .swiper-container {
@@ -38,6 +52,12 @@
 
 // 不同裝置文字大小
 // Extra small devices (portrait phones, less than 576px)
+@media(max-width: 400px){
+    .py-xl{
+        padding-top: 100px;
+        padding-bottom: 200px;
+    }
+}
 
 @media (max-width: 575.98px) {
     .h2-sm{
@@ -52,7 +72,6 @@
         font-size: 10px;
     }
   
-
 }
 
 // Small devices (landscape phones, less than 768px)
@@ -67,16 +86,17 @@
     .font-xl{
         font-size: 50px;
     }
+
+    
 }
 
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991.98px) {
-  
+    
 }
 
 // Large devices (desktops, less than 1200px)
 @media (max-width: 1199.98px) {
-    
 }
 
 // Extra large devices (large desktops)
