--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -38,13 +38,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active bg-hover-primary">
-          <a class="nav-link" href="#calc">計算工時 <span class="sr-only">(current)</span></a>
+          <a class="nav-link scrollTop" href="#calc">計算工時 <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#adv">加入好處</a>
+          <a class="nav-link scrollTop" href="#adv">加入好處</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#join">先來登記</a>
+          <a class="nav-link scrollTop" href="#join">先來登記</a>
         </li>
       </ul>
     </div>
