--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -26,6 +26,16 @@
   <link rel="icon" href="./assets/images/favicon-16x16.png">
   <!-- AOS 動畫套件 -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- 分析網站 GA  -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5JH4CGCH8Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5JH4CGCH8Y');
+</script>
 </head>
 <body>
   
