--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -30,7 +30,8 @@
     text-shadow: 20px 0px 40px rgb(0, 172, 251), 10px 20px 80px rgb(56, 76, 255), 0px 0px 30px rgb(106, 195, 255), 0px 0px 90px rgb(251, 252, 255), 0px 0px 20px rgb(193, 222, 255), 10px 0px 30px rgb(138, 212, 255), 0px 0px 100px rgb(255, 255, 255);
 }
 
-.text-light{
+.text-light2{
+    color:#fff;
     text-shadow: 0px 0px 20px rgb(6, 255, 234), 0px 0px 10px rgb(56, 109, 255), 0px 0px 10px rgb(106, 195, 255), 0px 0px 20px rgb(8, 70, 255), 0px 0px 20px rgb(255, 255, 255), 0px 0px 30px rgb(115, 204, 255), 0px 0px 100px rgb(12, 117, 255);
 }
 
